# flowfsm

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
examples/: config_example.yml  workflow_example.py
flow-fsm/config/: loader.py
flow-fsm/core/: base.py  event.py  state.py  transition.py  workflow.py
